[WPE][GTK] Document remote web inspector usage https://bugs.webkit.org/show_bug.cgi?id=286799
Reviewed by Carlos Garcia Campos.

Add a new Markdown page for the GTK and WPE port documentation
explaining how to run the remote Web Inspector server, and how
to connect to it from another browser.

* Source/WebKit/PlatformGTK.cmake: List new Markdown template.
* Source/WebKit/PlatformWPE.cmake: Ditto.
* Source/WebKit/glib/environment-variables.md.in: Add variables related
  to the remote inspector server.
* Source/WebKit/glib/remote-inspector.md.in: Added.
* Source/WebKit/gtk/gtk3-webkitgtk.toml.in: List new Markdown page.
* Source/WebKit/gtk/gtk4-webkitgtk.toml.in: Ditto.
* Source/WebKit/wpe/wpewebkit.toml.in: Ditto.

Canonical link: https://commits.webkit.org/289603@main

--- a/Source/WebKit/glib/environment-variables.md.in
+++ b/Source/WebKit/glib/environment-variables.md.in
@@ -38,3 +38,14 @@ You can ask WebKit to try to use a format instead the one that is recommended by
 Example: `AR24:0:scanout`
 
 #endif
+
+
+## Remote Web Inspector Variables
+
+- `WEBKIT_INSPECTOR_SERVER`: The address and port in `ip:port` format (e.g.
+  `127.0.0.1:10000`) where the remote inspector service will listen for
+  connections.
+- `WEBKIT_INSPECTOR_HTTP_SERVER`: The address and port in `ip:port` format
+  where the remote inspector service will listen for HTTP connections.
+
+See [Remote Web Inspector](remote-inspector.html) for more details.
