--- a/Source/WebKit/gtk/gtk3-webkitgtk.toml.in
+++ b/Source/WebKit/gtk/gtk3-webkitgtk.toml.in
@@ -43,4 +43,5 @@ urlmap_file = "gtk@GTK_API_VERSION@-urlmap.js"
 content_files = [
     "environment-variables.md",
     "profiling.md",
+    "remote-inspector.md",
 ]
