--- a/Source/WebKit/gtk/gtk4-webkitgtk.toml.in
+++ b/Source/WebKit/gtk/gtk4-webkitgtk.toml.in
@@ -42,6 +42,7 @@ content_files = [
     "overview.md",
     "environment-variables.md",
     "profiling.md",
+    "remote-inspector.md",
     "migrating-to-webkitgtk-6.0.md"
 ]
 
