WebKitWebExtensionMatchPattern.h:65:1: error: function declaration isn't a prototype [-Werror=strict-prototypes] https://bugs.webkit.org/show_bug.cgi?id=286813
Unreviewed build fix.

* Source/WebKit/UIProcess/API/glib/WebKitWebExtensionMatchPattern.h.in:

Canonical link: https://commits.webkit.org/289606@main

--- a/Source/WebKit/UIProcess/API/glib/WebKitWebExtensionMatchPattern.h.in
+++ b/Source/WebKit/UIProcess/API/glib/WebKitWebExtensionMatchPattern.h.in
@@ -60,10 +60,10 @@ WEBKIT_API void
 webkit_web_extension_match_pattern_unref (WebKitWebExtensionMatchPattern *matchPattern);
 
 WEBKIT_API WebKitWebExtensionMatchPattern*
-webkit_web_extension_match_pattern_new_all_urls ();
+webkit_web_extension_match_pattern_new_all_urls (void);
 
 WEBKIT_API WebKitWebExtensionMatchPattern*
-webkit_web_extension_match_pattern_new_all_hosts_and_schemes ();
+webkit_web_extension_match_pattern_new_all_hosts_and_schemes (void);
 
 WEBKIT_API WebKitWebExtensionMatchPattern*
 webkit_web_extension_match_pattern_new_with_string (const gchar  *string,
