[CoreIPC] ASAN_TRAP in WebKit::ImageBufferShareableMappedIOSurfaceBackend::create https://bugs.webkit.org/show_bug.cgi?id=286756 rdar://143264721
Reviewed by Said Abou-Hallawa.

Added HAVE(IOSURFACE_RGB10) guards around all RGB10|A8 format usage.

* LayoutTests/ipc/create-image-buffer-crash-expected.txt: Added.
* LayoutTests/ipc/create-image-buffer-crash.html: Added.
* Source/WebCore/platform/graphics/ImageBufferPixelFormat.h:
(WebCore::convertToPixelFormat):
* Source/WebCore/platform/graphics/PixelBuffer.cpp:
(WebCore::PixelBuffer::supportedPixelFormat):
* Source/WebCore/platform/graphics/PixelBufferConversion.cpp:
(WebCore::makeVImageCGImageFormat):
(WebCore::convertImagePixelsSkia):
* Source/WebCore/platform/graphics/PixelFormat.cpp:
(WebCore::operator<<):
* Source/WebCore/platform/graphics/PixelFormat.h:
* Source/WebKit/GPUProcess/graphics/RemoteImageBufferSet.h:
(WebKit::RemoteImageBufferSet::isOpaque const):
* Source/WebKit/Shared/RemoteLayerTree/RemoteLayerBackingStore.mm:
(WebKit::RemoteLayerBackingStore::bytesPerPixel const):
* Source/WebKit/Shared/WebCoreArgumentCoders.serialization.in:

Canonical link: https://commits.webkit.org/289634@main

--- a/Source/WebKit/Shared/WebCoreArgumentCoders.serialization.in
+++ b/Source/WebKit/Shared/WebCoreArgumentCoders.serialization.in
@@ -2557,8 +2557,10 @@ enum class WebCore::PixelFormat : uint8_t {
     RGBA8,
     BGRX8,
     BGRA8,
+#if HAVE(IOSURFACE_RGB10)
     RGB10,
     RGB10A8,
+#endif
 #if HAVE(HDR_SUPPORT)
     RGBA16F,
 #endif
@@ -2567,8 +2569,10 @@ enum class WebCore::PixelFormat : uint8_t {
 enum class WebCore::ImageBufferPixelFormat : uint8_t {
     BGRX8,
     BGRA8,
+#if HAVE(IOSURFACE_RGB10)
     RGB10,
     RGB10A8,
+#endif
 #if HAVE(HDR_SUPPORT)
     RGBA16F,
 #endif
