[WKTR] Remove workaround for kUTTypePNG in TestInvocationCG.cpp <https://bugs.webkit.org/show_bug.cgi?id=286846> <rdar://143993362>
Reviewed by Sam Weinig.

* Tools/WebKitTestRunner/Configurations/WebKitTestRunner.xcconfig:
- Link to UniformTypeIdentifiers.framework.
* Tools/WebKitTestRunner/Configurations/WebKitTestRunnerApp.xcconfig:
- Ditto.
* Tools/WebKitTestRunner/WebKitTestRunner.xcodeproj/project.pbxproj:
- Rename TestInvocationCG.cpp to TestInvocationCocoa.mm to use
  Objective-C UTTypePNG class.
* Tools/WebKitTestRunner/cocoa/TestInvocationCocoa.mm: Renamed from Tools/WebKitTestRunner/cg/TestInvocationCG.cpp.
- Replace use of kUTTypePNG with undeprecated UTTypePNG.identifier.

Canonical link: https://commits.webkit.org/289672@main

--- a/Tools/WebKitTestRunner/Configurations/WebKitTestRunnerApp.xcconfig
+++ b/Tools/WebKitTestRunner/Configurations/WebKitTestRunnerApp.xcconfig
@@ -1,5 +1,5 @@
 //
-// Copyright (C) 2010-2015 Apple Inc. All rights reserved.
+// Copyright (C) 2010-2025 Apple Inc. All rights reserved.
 //
 // Redistribution and use in source and binary forms, with or without
 // modification, are permitted provided that the following conditions
@@ -30,7 +30,7 @@ PRODUCT_BUNDLE_IDENTIFIER = org.webkit.$(PRODUCT_NAME:rfc1034identifier);
 
 GCC_ENABLE_OBJC_EXCEPTIONS = YES;
 
-OTHER_LDFLAGS = $(inherited) -lWebKitTestRunner -lPAL -lWebCoreTestSupport -framework JavaScriptCore -framework CoreGraphics -framework QuartzCore -framework ImageIO -framework IOKit -framework UIKit -framework WebKit -framework Foundation -framework GraphicsServices;
+OTHER_LDFLAGS = $(inherited) -lWebKitTestRunner -lPAL -lWebCoreTestSupport -framework CoreGraphics -framework Foundation -framework GraphicsServices -framework ImageIO -framework IOKit -framework JavaScriptCore -framework QuartzCore -framework UIKit -framework UniformTypeIdentifiers -framework WebKit;
 OTHER_LDFLAGS[sdk=watch*] = $(OTHER_LDFLAGS) -framework PepperUICore
 
 STRIP_STYLE = debugging;
