--- a/Tools/WebKitTestRunner/Configurations/WebKitTestRunner.xcconfig
+++ b/Tools/WebKitTestRunner/Configurations/WebKitTestRunner.xcconfig
@@ -1,5 +1,5 @@
 //
-// Copyright (C) 2010-2015 Apple Inc. All rights reserved.
+// Copyright (C) 2010-2025 Apple Inc. All rights reserved.
 //
 // Redistribution and use in source and binary forms, with or without
 // modification, are permitted provided that the following conditions
@@ -30,7 +30,7 @@ LD_RUNPATH_SEARCH_PATHS = "@loader_path";
 PRODUCT_NAME = WebKitTestRunner;
 PRODUCT_BUNDLE_IDENTIFIER = com.apple.WebKit.WebKitTestRunner;
 GCC_ENABLE_OBJC_EXCEPTIONS = YES;
-OTHER_LDFLAGS[sdk=macosx*] = $(inherited) -lWebKitTestRunner -framework Carbon -framework Cocoa -framework JavaScriptCore -framework WebKit;
+OTHER_LDFLAGS[sdk=macosx*] = $(inherited) -lWebKitTestRunner -framework Carbon -framework Cocoa -framework JavaScriptCore -framework UniformTypeIdentifiers -framework WebKit;
 STRIP_STYLE = debugging;
 SKIP_INSTALL[sdk=embedded*] = YES;
 
