Block Mach lookup in the WebContent sandbox https://bugs.webkit.org/show_bug.cgi?id=286279 rdar://143139266
Reviewed by Sihui Liu.

We currently block all messages to the service, but we should also block the Mach lookup.

* Source/WebKit/Resources/SandboxProfiles/ios/com.apple.WebKit.WebContent.sb.in:

Canonical link: https://commits.webkit.org/289675@main

--- a/Source/WebKit/Resources/SandboxProfiles/ios/com.apple.WebKit.WebContent.sb.in
+++ b/Source/WebKit/Resources/SandboxProfiles/ios/com.apple.WebKit.WebContent.sb.in
@@ -489,10 +489,7 @@
             (allow mach-message-send (notifyd-message-numbers)))))
 
 #if ENABLE(NOTIFY_BLOCKING)
-(allow mach-lookup (global-name "com.apple.system.notification_center")
-    (apply-message-filter (deny mach-message-send)))
-(with-filter (require-not (webcontent-process-launched))
-    (allow-notifyd))
+(deny mach-lookup (global-name "com.apple.system.notification_center"))
 #else
 (allow-notifyd)
 #endif
