--- a/Source/WebKit/UIProcess/Model/ModelProcessProxy.messages.in
+++ b/Source/WebKit/UIProcess/Model/ModelProcessProxy.messages.in
@@ -22,7 +22,11 @@
 
 #if ENABLE(MODEL_PROCESS)
 
-[ExceptionForEnabledBy]
+[
+    DispatchedFrom=Model,
+    DispatchedTo=UI,
+    ExceptionForEnabledBy
+]
 messages -> ModelProcessProxy {
 
     TerminateWebProcess(WebCore::ProcessIdentifier webProcessIdentifier)
