--- a/Source/WebKit/WebProcess/Model/ModelProcessConnection.messages.in
+++ b/Source/WebKit/WebProcess/Model/ModelProcessConnection.messages.in
@@ -22,7 +22,11 @@
 
 #if ENABLE(MODEL_PROCESS)
 
-[ExceptionForEnabledBy]
+[
+    DispatchedFrom=Model,
+    DispatchedTo=WebContent,
+    ExceptionForEnabledBy
+]
 messages -> ModelProcessConnection WantsDispatchMessage {
     DidInitialize(std::optional<WebKit::ModelProcessConnectionInfo> info) CanDispatchOutOfOrder
 }
