--- a/Source/WebKit/NetworkProcess/Authentication/AuthenticationManager.messages.in
+++ b/Source/WebKit/NetworkProcess/Authentication/AuthenticationManager.messages.in
@@ -20,7 +20,11 @@
 # OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE
 # OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 
-[ExceptionForEnabledBy]
+[
+    DispatchedFrom=UI,
+    DispatchedTo=Networking,
+    ExceptionForEnabledBy
+]
 messages -> AuthenticationManager {
     void CompleteAuthenticationChallenge(WebKit::AuthenticationChallengeIdentifier challengeID, enum:uint8_t WebKit::AuthenticationChallengeDisposition disposition, WebCore::Credential credential);
 }
