--- a/Source/WebKit/UIProcess/Network/CustomProtocols/LegacyCustomProtocolManagerProxy.messages.in
+++ b/Source/WebKit/UIProcess/Network/CustomProtocols/LegacyCustomProtocolManagerProxy.messages.in
@@ -20,7 +20,11 @@
 # OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE
 # OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 
-[ExceptionForEnabledBy]
+[
+    DispatchedFrom=Networking,
+    DispatchedTo=UI,
+    ExceptionForEnabledBy
+]
 messages -> LegacyCustomProtocolManagerProxy {
     StartLoading(WebKit::LegacyCustomProtocolID customProtocolID, WebCore::ResourceRequest request)
     StopLoading(WebKit::LegacyCustomProtocolID customProtocolID)
