Add strongly type representations of CSS/Style Numeric + Keywords https://bugs.webkit.org/show_bug.cgi?id=286889
Reviewed by Antti Koivisto.

Partially re-applies only the new base types from 288829@main after
having the subset tested and finding no performance regression.

Refactors CSS::PrimitiveNumeric and Style::PrimitiveNumeric so that
their underlying data structure can be used to implement
CSS::PrimitiveNumericOrKeyword and Style::PrimitiveNumericOrKeyword.

* Source/WTF/WTF.xcodeproj/project.pbxproj:
* Source/WTF/wtf/CMakeLists.txt:
* Source/WTF/wtf/FlatteningVariantAdaptor.h: Added.
* Source/WTF/wtf/Forward.h:
* Source/WTF/wtf/StdLibExtras.h:
* Source/WTF/wtf/VariantExtras.h:
* Source/WebCore/Headers.cmake:
* Source/WebCore/WebCore.xcodeproj/project.pbxproj:
* Source/WebCore/css/calc/CSSCalcTree+Simplification.cpp:
* Source/WebCore/css/calc/CSSCalcTree+Simplification.h:
* Source/WebCore/css/calc/CSSCalcValue.cpp:
* Source/WebCore/css/calc/CSSCalcValue.h:
* Source/WebCore/css/values/CSSValueAggregates.h:
* Source/WebCore/css/values/CSSValueConcepts.h:
* Source/WebCore/css/values/primitives/CSSPrimitiveData.h: Added.
* Source/WebCore/css/values/primitives/CSSPrimitiveKeywordList.h: Added.
* Source/WebCore/css/values/primitives/CSSPrimitiveNumeric.h: Added.
* Source/WebCore/css/values/primitives/CSSPrimitiveNumericConcepts.h:
* Source/WebCore/css/values/primitives/CSSPrimitiveNumericOrKeyword.h: Added.
* Source/WebCore/css/values/primitives/CSSPrimitiveNumericTypes+CSSValueConversions.h: Added.
* Source/WebCore/css/values/primitives/CSSPrimitiveNumericTypes+CSSValueCreation.h:
* Source/WebCore/css/values/primitives/CSSPrimitiveNumericTypes.h:
* Source/WebCore/rendering/TextPainter.cpp:
* Source/WebCore/style/values/StyleValueTypes.h:
* Source/WebCore/style/values/primitives/StylePrimitiveNumeric.h: Copied from Source/WebCore/style/values/primitives/StylePrimitiveNumericTypes.h.
* Source/WebCore/style/values/primitives/StylePrimitiveNumericOrKeyword+Conversions

--- a/Source/WTF/wtf/CMakeLists.txt
+++ b/Source/WTF/wtf/CMakeLists.txt
@@ -92,6 +92,7 @@ set(WTF_PUBLIC_HEADERS
     FixedBitVector.h
     FixedVector.h
     FixedWidthDouble.h
+    FlatteningVariantAdaptor.h
     FlipBytes.h
     Float16.h
     ForbidHeapAllocation.h
