GraphicsContext::drawLinesForText might read out of bounds https://bugs.webkit.org/show_bug.cgi?id=286570 rdar://143270489
Reviewed by Antti Koivisto.

A compromised WCP could send width array with uneven amount of elements
to GraphicsContext::drawLinesForText(). This would cause out-of-bounds
read, as drawLinesForText expects [begin, end] pairs of line segments.

The root cause is that the function used incorrect type DashArray
to pass the line segments. DashArray is a type to pass doubles
that represent lengths relative to previous elements. When used
correctly DashArray [5,6,7] would encode segment list [{0, 5}, {11, 18}].
Note, that the implementation did not use DashArray this way.

Fix by introducing FloatSegment and pass Vector<FloatSegment> instead
of DashArray.

This fixes following issues:
- Avoid passing doubles. The source algorithm works
  with floats, so sending doubles is redundant.
- Avoid conversion from float pair array to float array in the source
  algorithm. The source algorithm already works with float pairs.

Since the change of types touches all of the lines in the source
algorithm, do also following:
- Simplify source algorithm
- Avoid copies of the vectors in the source algorithm

Source algorithm would do following full passes:
 1. Dilate intersection line segments
 2. Sort interections along segment begin
 3. Merge overlapping intersection segments
 4. Compute difference between a solid line and intersections

 Instead, do following full passes:
 1. Sort intersections along segment begin
 2. Compute difference between a solid line and intersections, with
   intersections dilated.

The difference can be computed with overlapping intersections, overlaps
do not affect the result.

For GraphicsContext functions:
- Pass std::span<const FloatSegment> instead of Vector<FloatSegment>,
  as the callee does not need to use Vector functionality anywhere.
- Pass span as value, because it's small and this prevents pointer
  chasing.
- Fix few .reserve

--- a/Source/WebKit/Shared/WebCoreArgumentCoders.serialization.in
+++ b/Source/WebKit/Shared/WebCoreArgumentCoders.serialization.in
@@ -5224,6 +5224,11 @@ header: <WebCore/ImageTypes.h>
     WebCore::Headroom headroom();
 };
 
+[AdditionalEncoder=StreamConnectionEncoder] struct WebCore::FloatSegment {
+    float begin;
+    float end;
+};
+
 struct WebCore::CanvasActivityRecord {
     HashSet<String> textWritten;
     bool wasDataRead;
