Trigger a signal in the UI Process when the web page provides a spatial backdrop https://bugs.webkit.org/show_bug.cgi?id=286510 rdar://141175983
Reviewed by Ada Chan and Chris Dumez.

Expose the value of a spatial backdrop link tag to the UI Process.

* Source/WTF/Scripts/Preferences/UnifiedWebPreferences.yaml:
* Source/WTF/wtf/PlatformEnableCocoa.h:
* Source/WebCore/Sources.txt:
* Source/WebCore/WebCore.xcodeproj/project.pbxproj:
* Source/WebCore/dom/Document.cpp:
(WebCore::Document::spatialBackdropSource):
(WebCore::Document::spatialBackdropLinkElementChanged):
(WebCore::Document::determineActiveSpatialBackdropSource):
(WebCore::Document::spatialBackdropSourceChanged):
(WebCore::Document::setURL):
* Source/WebCore/dom/Document.h:

* Source/WebCore/dom/SpatialBackdropSource.cpp: Added.
(WebCore::SpatialBackdropSource::SpatialBackdropSource):
* Source/WebCore/dom/SpatialBackdropSource.h: Added.
(WebCore::SpatialBackdropSource::SpatialBackdropSource):
(WebCore::operator==):
Transports the spatial backdrop properties that are useful to know for the UI
Process, this includes the source (current URL) from which the backdrop was
provided, and the URL of both the provided model and environmentmap.

* Source/WebCore/html/HTMLLinkElement.cpp:
(WebCore::HTMLLinkElement::attributeChanged):
(WebCore::HTMLLinkElement::process):
(WebCore::HTMLLinkElement::removedFromAncestor):
(WebCore::HTMLLinkElement::isURLAttribute const):
(WebCore::HTMLLinkElement::environmentmap const):
(WebCore::HTMLLinkElement::isSpatialBackdrop const):

* Source/WebCore/html/HTMLLinkElement.h:
* Source/WebCore/html/HTMLLinkElement.idl:
* Source/WebCore/html/LinkRelAttribute.cpp:
* Source/WebCore/html/LinkRelAttribute.h:
Add the "spatial-backdrop" rel, and the "environmentmap" attribute to
the link tag.

* Source/WebCore/page/ChromeClient.h:
(WebCore::ChromeClient::spatialBackdropSourceChanged const):
* Source/WebCore/page/Page.cpp:
(WebCore::Page::spatialBackdropSource const):
* Source/WebCore/page/Page.

--- a/Source/WTF/Scripts/Preferences/UnifiedWebPreferences.yaml
+++ b/Source/WTF/Scripts/Preferences/UnifiedWebPreferences.yaml
@@ -8680,6 +8680,23 @@ WebLocksAPIEnabled:
   sharedPreferenceForWebProcess: true
   richJavaScript: true
 
+WebPageSpatialBackdropEnabled:
+  type: bool
+  status: testable
+  category: html
+  condition: ENABLE(WEB_PAGE_SPATIAL_BACKDROP)
+  humanReadableName: "Web Page Spatial Backdrop"
+  humanReadableDescription: "Enable Web Page Spatial Backdrop"
+  defaultValue:
+    WebKitLegacy:
+      default: false
+    WebKit:
+      default: false
+    WebCore:
+      default: false
+  disableInLockdownMode: true
+  sharedPreferenceForWebProcess: true
+
 WebRTCAV1CodecEnabled:
   type: bool
   status: preview
