A page with `overflow-y: hidden` can sometimes still be scrolled https://bugs.webkit.org/show_bug.cgi?id=286554 rdar://143660753
Reviewed by Matt Woodrow.

A page with `body { overflow-y: hidden; }` can still be partially scrolled (without
momentum). This happens because the `shouldRubberBand()` logic says that we can rubberband
vertically, so we allow the event through and apply the scroll delta.

The bug falls out of some complexity around when we actually allow rubberbanding on the
root, which has some surprising behaviors. We allow rubberbanding on an unscrollable root
to give the user a feeling of responsiveness, but only "unscrollable" in the sense of "not
enough content to scroll", not "scrolling disallowed by the web content (i.e. `overflow:
hidden`). The bug was that we didn't strictly evaluate this per axis, so if the horizontal
axis allowed rubberbanding, we'd also allow it on the vertical axis.

Fix by expanding out the logic in `ScrollingTreeScrollingNode::shouldRubberBand()` to
check each axis independently. Also have
`ScrollingTreeScrollingNodeDelegateMac::shouldRubberBandOnSide()` share the same code.

Fixing `shouldRubberBand()` is not strictly enough though; there are cases where a
rubberband can be started on the horizontal axis, then, with a circular gesture on the
trackpad, the vertical axis can be stretched. This PR partially fixes this with the
changes in ScrollingEffectsController, but a full fix for this rare edge case requires
more work.

Because `ScrollingTree::handleWheelEventWithNode()` now more accurately predicts whether
an event will trigger any event handling, some tests[1] timed out because `WheelEventTestMonitor`
never received any deferral reasons. Rather than require tests to know if an event will
cause any scrolling, introduce a "None" deferral reason purely to allow a test that uses
`eventSender.monitorWheelEvents()` to not time out when an event simply doesn't trigger any
scrolling, for example because of `overscroll-behavior:

--- a/Source/WebKit/Shared/WebCoreArgumentCoders.serialization.in
+++ b/Source/WebKit/Shared/WebCoreArgumentCoders.serialization.in
@@ -7585,6 +7585,7 @@ class WebCore::FilterOperations {
 
 header: <WebCore/WheelEventTestMonitor.h>
 [OptionSet] enum class WebCore::WheelEventTestMonitorDeferReason : uint16_t {
+    None,
     HandlingWheelEvent,
     HandlingWheelEventOnMainThread,
     PostMainThreadWheelEventHandling,
