[SwiftUI] Create cross-import SwiftUI overlay https://bugs.webkit.org/show_bug.cgi?id=283455 rdar://140050834
Reviewed by Elliott Williams.

Add a new `_WebKit_SwiftUI` target to support clients not always needing to import SwiftUI when importing WebKit.
This also serves as a fix to being able to build WebKit in certain configurations.

* Source/WebKit/Configurations/_WebKit_SwiftUI.xcconfig: Added.
* Source/WebKit/Modules/SwiftUI.swiftoverlay: Added.
* Source/WebKit/UIProcess/API/Swift/WebPage+Navigation.swift:
* Source/WebKit/UIProcess/API/Swift/WebPage.swift:
(WebPage_v0.url):
(WebPage_v0.title):
(WebPage_v0.estimatedProgress):
(WebPage_v0.isLoading):
(WebPage_v0.serverTrust):
(WebPage_v0.hasOnlySecureContent):
(WebPage_v0.backingWebView):
(KeyValueObservations.contents):
(WebPage_v0.themeColor): Deleted.
* Source/WebKit/WebKit.xcodeproj/project.pbxproj:
* Source/WebKit/_WebKit_SwiftUI/CrossImportOverlay.swift: Added.
* Source/WebKit/_WebKit_SwiftUI/Info.plist: Added.
* Source/WebKit/_WebKit_SwiftUI/WebPage+SwiftUI.swift: Added.
(WebPage_v0.themeColor):
* Source/WebKit/_WebKit_SwiftUI/WebView.swift: Renamed from Source/WebKit/UIProcess/API/Swift/WebView.swift.
(WebView_v0.body):
(WebViewWrapper.frame):
(WebViewWrapper.bounds):
(WebViewWrapper.webView):
(WebViewWrapper.updateWebViewFrame):
(WebViewRepresentable.makePlatformView(_:)):
(WebViewRepresentable.updatePlatformView(_:context:)):
(WebViewRepresentable.makeUIView(_:)):
(WebViewRepresentable.updateUIView(_:context:)):
(WebViewRepresentable.makeNSView(_:)):
(WebViewRepresentable.updateNSView(_:context:)):
* Tools/MiniBrowser/SwiftUI/ContentView.swift:
* Tools/TestWebKitAPI/Tests/WebKit Swift/WebPage.swift:

Canonical link: https://commits.webkit.org/289906@main

--- a/Source/WebKit/Configurations/BaseTarget.xcconfig
+++ b/Source/WebKit/Configurations/BaseTarget.xcconfig
@@ -78,3 +78,8 @@ WK_CORE_PREDICTION_DEFINES_YES = HAVE_CORE_PREDICTION;
 WK_RELOCATABLE_WEBPUSHD = $(WK_AND_$(WK_RELOCATABLE_FRAMEWORKS)_$(WK_NOT_$(WK_EMPTY_$(WK_OVERRIDE_FRAMEWORKS_DIR))));
 ENABLE_RELOCATABLE_WEBPUSHD = $(ENABLE_RELOCATABLE_WEBPUSHD_$(WK_RELOCATABLE_WEBPUSHD));
 ENABLE_RELOCATABLE_WEBPUSHD_YES = ENABLE_RELOCATABLE_WEBPUSHD;
+
+SWIFT_INCLUDE_PATHS = $(SRCROOT)/Modules/Internal;
+
+HEADERMAP_INCLUDES_FRAMEWORK_ENTRIES_FOR_TARGETS_NOT_BEING_BUILT = NO;
+HEADERMAP_USES_VFS = YES;
