--- a/Tools/TestWebKitAPI/Configurations/TestWebKitAPIBundle.xcconfig
+++ b/Tools/TestWebKitAPI/Configurations/TestWebKitAPIBundle.xcconfig
@@ -49,3 +49,19 @@ SWIFT_VERSION[sdk=xr*1*] = 5.0;
 SWIFT_OBJC_BRIDGING_HEADER = Tests/WebKit Swift/TestWebKitAPIBundle-Bridging-Header.h;
 SWIFT_OPTIMIZATION_LEVEL = -O;
 SWIFT_OPTIMIZATION_LEVEL[config=Debug] = -Onone;
+
+WK_ENABLE_SWIFTUI = YES;
+WK_ENABLE_SWIFTUI[sdk=macosx13*] = NO;
+WK_ENABLE_SWIFTUI[sdk=macosx14*] = NO;
+WK_ENABLE_SWIFTUI[sdk=macosx15*] = NO;
+WK_ENABLE_SWIFTUI[sdk=iphone*17*] = NO;
+WK_ENABLE_SWIFTUI[sdk=iphone*18*] = NO;
+WK_ENABLE_SWIFTUI[sdk=watch*] = NO;
+WK_ENABLE_SWIFTUI[sdk=appletv*] = NO;
+WK_ENABLE_SWIFTUI[sdk=xros1*] = NO;
+WK_ENABLE_SWIFTUI[sdk=xros2*] = NO;
+WK_ENABLE_SWIFTUI[sdk=xrsimulator1*] = NO;
+WK_ENABLE_SWIFTUI[sdk=xrsimulator2*] = NO;
+
+SWIFT_ACTIVE_COMPILATION_CONDITIONS = $(SWIFT_ACTIVE_COMPILATION_CONDITIONS_$(WK_ENABLE_SWIFTUI));
+SWIFT_ACTIVE_COMPILATION_CONDITIONS_YES = ENABLE_SWIFTUI;
