--- a/Source/WebKit/Configurations/WebKit.xcconfig
+++ b/Source/WebKit/Configurations/WebKit.xcconfig
@@ -310,6 +310,9 @@ WK_EXCLUDED_SEPARATED_IMAGE_FILES_ = WKSeparatedImageView.swift;
 
 EXCLUDED_EXTENSION_SOURCE_FILE_NAMES = Shared/AuxiliaryProcessExtensions/*;
 
+WK_EXCLUDED_SWIFTOVERLAY_SOURCE_FILE_NAMES = $(WK_EXCLUDED_SWIFTOVERLAY_SOURCE_FILE_NAMES_$(WK_ENABLE_SWIFTUI))
+WK_EXCLUDED_SWIFTOVERLAY_SOURCE_FILE_NAMES_NO = SwiftUI.swiftoverlay
+
 INCLUDED_EXTENSION_SOURCE_FILE_NAMES[sdk=iphone*] = Shared/AuxiliaryProcessExtensions/*;
 INCLUDED_EXTENSION_SOURCE_FILE_NAMES[sdk=iphone*17.0.internal] = ;
 INCLUDED_EXTENSION_SOURCE_FILE_NAMES[sdk=iphone*17.1.internal] = ;
@@ -317,7 +320,7 @@ INCLUDED_EXTENSION_SOURCE_FILE_NAMES[sdk=iphone*17.2.internal] = ;
 INCLUDED_EXTENSION_SOURCE_FILE_NAMES[sdk=iphone*17.3.internal] = ;
 INCLUDED_EXTENSION_SOURCE_FILE_NAMES[sdk=xr*] = ;
 
-EXCLUDED_SOURCE_FILE_NAMES = $(EXCLUDED_PRODUCT_DEPENDENCY_NAMES) $(EXCLUDED_IOS_RESOURCE_FILE_NAMES) $(EXCLUDED_MACOS_PLUGIN_FILE_NAMES) $(EXCLUDED_MIGRATED_HEADERS_COCOA_TOUCH_$(WK_IS_COCOA_TOUCH)) $(WK_EXCLUDED_WEBPUSHD_SANDBOX) $(EXCLUDED_EXTENSION_SOURCE_FILE_NAMES) $(EXCLUDED_SWIFT_FILE_NAMES) $(WK_EXCLUDED_SEPARATED_IMAGE_FILES);
+EXCLUDED_SOURCE_FILE_NAMES = $(EXCLUDED_PRODUCT_DEPENDENCY_NAMES) $(EXCLUDED_IOS_RESOURCE_FILE_NAMES) $(EXCLUDED_MACOS_PLUGIN_FILE_NAMES) $(EXCLUDED_MIGRATED_HEADERS_COCOA_TOUCH_$(WK_IS_COCOA_TOUCH)) $(WK_EXCLUDED_WEBPUSHD_SANDBOX) $(EXCLUDED_EXTENSION_SOURCE_FILE_NAMES) $(EXCLUDED_SWIFT_FILE_NAMES) $(WK_EXCLUDED_SEPARATED_IMAGE_FILES) $(WK_EXCLUDED_SWIFTOVERLAY_SOURCE_FILE_NAMES);
 
 // These are only available in internal builds, so they must be explicitly ignored for the open-source build to succeed.
 EXCLUDED_PRODUCT_DEPENDENCY_NAMES = libWebKitAdditions.a AuthenticationServicesCore.framework;
