Support multiple writable streams for a single file handle rdar://144228125 https://bugs.webkit.org/show_bug.cgi?id=287082
Reviewed by Sihui Liu.

Introduce FileSystemWritableFileStreamIdentifier to allow a single file handle to create multiple writables.
We store the identifier in FileSystemWritableFileStreamSink and pass it through IPC to network process.
FileSystemStorageManager is updated to support shared locks.
FileSystemStorageHandle is updated to keep a map of file handles, one per writable.

Covered by rebased test.

* LayoutTests/imported/w3c/web-platform-tests/fs/FileSystemWritableFileStream-write.https.any-expected.txt:
* LayoutTests/imported/w3c/web-platform-tests/fs/FileSystemWritableFileStream-write.https.any.worker-expected.txt:
* LayoutTests/imported/w3c/web-platform-tests/fs/FileSystemWritableFileStream.https.any-expected.txt:
* LayoutTests/imported/w3c/web-platform-tests/fs/FileSystemWritableFileStream.https.any.worker-expected.txt:
* LayoutTests/imported/w3c/web-platform-tests/fs/script-tests/FileSystemWritableFileStream.js:
(directory_test.async t):
* Source/WebCore/Headers.cmake:
* Source/WebCore/Modules/filesystemaccess/FileSystemFileHandle.cpp:
(WebCore::FileSystemFileHandle::createWritable):
(WebCore::FileSystemFileHandle::closeWritable):
(WebCore::FileSystemFileHandle::executeCommandForWritable):
* Source/WebCore/Modules/filesystemaccess/FileSystemFileHandle.h:
* Source/WebCore/Modules/filesystemaccess/FileSystemStorageConnection.h:
* Source/WebCore/Modules/filesystemaccess/FileSystemWritableFileStreamIdentifier.h: Added.
* Source/WebCore/Modules/filesystemaccess/FileSystemWritableFileStreamSink.cpp:
(WebCore::FileSystemWritableFileStreamSink::create):
(WebCore::FileSystemWritableFileStreamSink::FileSystemWritableFileStreamSink):
(WebCore::FileSystemWritableFileStreamSink::~FileSystemWritableFileStreamSink):
(WebCore::FileSystemWritableFileStreamSink::write):
(WebCore::FileSystemWritableFileStreamSink::close):
(WebCore::FileSystemWritableFi

--- a/Source/WebKit/Shared/WTFArgumentCoders.serialization.in
+++ b/Source/WebKit/Shared/WTFArgumentCoders.serialization.in
@@ -173,6 +173,7 @@ template: enum class WebCore::DOMCacheIdentifierType
 template: enum class WebCore::BroadcastChannelIdentifierType
 template: enum class WebCore::FileSystemHandleIdentifierType
 template: enum class WebCore::FileSystemSyncAccessHandleIdentifierType
+template: enum class WebCore::FileSystemWritableFileStreamIdentifierType
 template: enum class WebCore::IDBDatabaseConnectionIdentifierType
 template: enum class WebCore::IDBIndexIdentifierType
 template: enum class WebCore::IDBObjectStoreIdentifierType
