[visionOS] Playing 360 or 180 videos displays an empty screen https://bugs.webkit.org/show_bug.cgi?id=287229 rdar://144206242
Reviewed by Eric Carlson.

Detect if a vide's metadata set a projection kind and is one of:
- Equirectangular (projection of a 360 degree sphere to a rectangular plane)
- HalfEquirectangular (projection of a 180 degree hemisphere to a rectangular plane)
- ParametricImmersive (with FOV or fisheye)

And if so will pass this information to the LMK Player and will create an immersive entity instead of a planar one.

Manually tested on Vision Pro.
* Source/WebCore/PAL/pal/cf/CoreMediaSoftLink.cpp:
* Source/WebCore/PAL/pal/cf/CoreMediaSoftLink.h: Adding new strings.
* Source/WebCore/html/track/VideoTrackConfiguration.cpp:
(WebCore::VideoTrackConfiguration::toJSON const):
* Source/WebCore/html/track/VideoTrackConfiguration.h:
(WebCore::VideoTrackConfiguration::isImmersiveVideo const):
(WebCore::VideoTrackConfiguration::setIsImmersiveVideo):
* Source/WebCore/platform/cocoa/PlaybackSessionModel.h:
(WebCore::PlaybackSessionModelClient::isImmersiveVideoChanged):
* Source/WebCore/platform/cocoa/PlaybackSessionModelMediaElement.h:
* Source/WebCore/platform/cocoa/PlaybackSessionModelMediaElement.mm:
(WebCore::PlaybackSessionModelMediaElement::maybeUpdateVideoMetadata):
* Source/WebCore/platform/graphics/PlatformVideoTrackConfiguration.h:
* Source/WebCore/platform/graphics/avfoundation/AVTrackPrivateAVFObjCImpl.h:
* Source/WebCore/platform/graphics/avfoundation/AVTrackPrivateAVFObjCImpl.mm:
(WebCore::AVTrackPrivateAVFObjCImpl::videoTrackConfiguration const):
(WebCore::AVTrackPrivateAVFObjCImpl::spatialVideoMetadata const):
(WebCore::AVTrackPrivateAVFObjCImpl::isImmersiveVideo const):
* Source/WebCore/platform/graphics/avfoundation/FormatDescriptionUtilities.cpp:
(WebCore::videoMetadataFromFormatDescription):
* Source/WebCore/platform/graphics/avfoundation/FormatDescriptionUtilities.h:
* Source/WebCore/platform/graphics/cocoa/NullVideoPresentationInterface.h

--- a/Source/WebKit/Shared/WebCoreArgumentCoders.serialization.in
+++ b/Source/WebKit/Shared/WebCoreArgumentCoders.serialization.in
@@ -5862,6 +5862,7 @@ struct WebCore::PlatformVideoTrackConfiguration : WebCore::PlatformTrackConfigur
     double framerate;
     uint64_t bitrate;
     std::optional<WebCore::SpatialVideoMetadata> spatialVideoMetadata;
+    bool isImmersiveVideo;
 };
 
 #endif
