Digital Credentials: implement Digital Credentials Coordinator and IPC https://bugs.webkit.org/show_bug.cgi?id=277850 rdar://134026261
Reviewed by Jean-Yves Avenard.

The patch introduces a Digital Credentials Coordinator that manages digital credential requests and integrates a new picker UI component (`WKDigitalCredentialsPicker`) to allow user interaction.
This is part of the implementation for the Digital Credentials API, which provides a way for web applications to request and use digital credentials from the user's device. Spec:
https://wicg.github.io/digital-credentials/

At at high level, this patch:

- Integrates digital credentials support into WebKit's existing credentials management infrastructure.
- Ensures digital credentials requests are handled asynchronously across process boundaries with robust error handling.
- Provides a friendly interface for selecting and returning digital credentials on supported platforms.

Key Changes:

- Digital Credentials Coordinator
  - Receives digital credential requests and validates preconditions (e.g. document focus, visibility, and permissions), as per spec.
  - Delegates the presentation of a picker UI to the platform-specific UI layer.
  - Handles completion callbacks by resolving or rejecting promises based on user input or errors.

- New UI Component - WKDigitalCredentialsPicker
  - Implements the picker UI in Objective-C++.
  - Provides methods to present and dismiss the picker.
  - Returns the digital credentials response data (or an error) via an asynchronous completion handler.

- IPC and Asynchronous Messaging
  - Adds new IPC messages (`ShowDigitalCredentialsPicker` and `DismissDigitalCredentialsPicker`) to route requests between the WebProcess and UIProcess.
  - Updates related classes (e.g. WebPage, PageClient, and their platform-specific implementations) to integrate digital credentials actions.

- Preferences and Feature Flags
  - Introduces a new preference key (`WebKitDigitalCredentialsEnabledPrefer

--- a/Source/WebKit/Shared/WebCoreArgumentCoders.serialization.in
+++ b/Source/WebKit/Shared/WebCoreArgumentCoders.serialization.in
@@ -1,4 +1,4 @@
-# Copyright (C) 2022-2024 Apple Inc. All rights reserved.
+# Copyright (C) 2022-2025 Apple Inc. All rights reserved.
 #
 # Redistribution and use in source and binary forms, with or without
 # modification, are permitted provided that the following conditions
@@ -6404,7 +6404,20 @@ struct WebCore::MockWebAuthenticationConfiguration {
     std::optional<WebCore::MockWebAuthenticationConfiguration::CcidConfiguration> ccid;
 };
 
-struct WebCore::OpenID4VPRequest {
+#if HAVE(DIGITAL_CREDENTIALS_UI)
+
+[Nested] struct WebCore::OpenID4VPRequest {
+};
+
+struct WebCore::DigitalCredentialsRequestData {
+    WebCore::DigitalCredentialRequestOptions options;
+    [Validator='!topOrigin->isNull()'] WebCore::SecurityOriginData topOrigin;
+    [Validator='!documentOrigin->isNull()'] WebCore::SecurityOriginData documentOrigin;
+};
+
+struct WebCore::DigitalCredentialsResponseData {
+    WebCore::IdentityCredentialProtocol protocol;
+    String responseData;
 };
 
 [Nested] struct WebCore::DigitalCredentialRequest {
@@ -6412,13 +6425,15 @@ struct WebCore::OpenID4VPRequest {
     WebCore::OpenID4VPRequest data;
 };
 
-struct WebCore::DigitalCredentialRequestOptions {
+[Nested] struct WebCore::DigitalCredentialRequestOptions {
     Vector<WebCore::DigitalCredentialRequest> requests;
 };
 
-enum class WebCore::IdentityCredentialProtocol : uint8_t {
+[Nested] enum class WebCore::IdentityCredentialProtocol : uint8_t {
     Openid4vp
 };
+
+#endif // HAVE(DIGITAL_CREDENTIALS_UI)
 
 #endif // ENABLE(WEB_AUTHN)
 
