[site-isolation] Position:fixed banner at top of imgur.com on iOS flickers when scrolling. https://bugs.webkit.org/show_bug.cgi?id=287061 <rdar://142972249>
Reviewed by Simon Fraser.

Actual bug fixed by making WKWebViewIOS::_didCommitLayerTree skip most of the
work for subframe process transactions, since they only apply to the main frame.

The main change here is making TransactionID ProcessQualified, so that
transactions from different processes don't get mixed up in the UI process.

Deletes the existing comparison operators on ProcessQualified (since they
ignored the process), and adds explicit comparison functions that assert if the
process is different.

Used the resulting compilation failures to find all places where we compared
TransactionsIDs and verified that they didn't try to compare values from
different process. Fixed the ones that did, including the _didCommitLayerTree
code.

ProcessQualified doesn't have a default constructor, so lots of TransactionID
instances changed to be std::optional.

* Source/WebCore/platform/ProcessQualified.h:
(WebCore::ProcessQualified::generateMonotonic):
(WebCore::ProcessQualified::next const):
(WebCore::ProcessQualified::increment):
(WebCore::ProcessQualified::loggingString const):
(WebCore::ProcessQualified::lessThanSameProcess):
(WebCore::ProcessQualified::lessThanOrEqualSameProcess):
(WebCore::ProcessQualified::greaterThanSameProcess):
(WebCore::ProcessQualified::greaterThanOrEqualSameProcess):
(WebCore::operator>): Deleted.
(WebCore::operator>=): Deleted.
(WebCore::operator<): Deleted.
(WebCore::operator<=): Deleted.
* Source/WebKit/Platform/cocoa/ImageAnalysisUtilities.mm:
(WebKit::requestVisualTranslation):
* Source/WebKit/Scripts/webkit/messages.py:
(serialized_identifiers):
* Source/WebKit/Scripts/webkit/tests/MessageArgumentDescriptions.cpp:
(IPC::serializedIdentifiers):
* Source/WebKit/Shared/MonotonicObjectIdentifier.serialization.in:
* Source/WebKit/Shared/ProcessQualified.serialization.in:
* Source/WebKit/Sh

--- a/Source/WebKit/Shared/MonotonicObjectIdentifier.serialization.in
+++ b/Source/WebKit/Shared/MonotonicObjectIdentifier.serialization.in
@@ -37,7 +37,7 @@ header: "MonotonicObjectIdentifier.h"
 };
 
 header: "MonotonicObjectIdentifier.h"
-[Alias=class MonotonicObjectIdentifier<TransactionIDType>, AdditionalEncoder=StreamConnectionEncoder, CustomHeader] alias WebKit::TransactionID {
+[Alias=class MonotonicObjectIdentifier<TransactionIDType>, AdditionalEncoder=StreamConnectionEncoder, CustomHeader] alias WebKit::TransactionIdentifier {
     [Validator='WebKit::MonotonicObjectIdentifier<WebKit::TransactionIDType>::isValidIdentifier(*toUInt64)'] uint64_t toUInt64();
 };
 
