[Materials] Add rendering support for hosted materials https://bugs.webkit.org/show_bug.cgi?id=287421 rdar://144551395
Reviewed by Richard Robinson.

Support rendering materials implemented in SwiftUI. These materials can be used
via `-apple-visual-effect`.

When a "hosted material" is used, a structural layer is created to encapsulate
the content layer. In the UI process, the structural layer is realized using
SwiftUI. On iOS, a `_UIHostingView` is created, and on macOS a `_CALayerView`
is created. A `materialEffect` is then applied to their respective root views.
WebKit's own layers are parented underneath the SwiftUI-created views/layers.

* Source/WebCore/platform/cocoa/AppleVisualEffect.cpp:
(WebCore::appleVisualEffectIsHostedMaterial):
* Source/WebCore/platform/cocoa/AppleVisualEffect.h:

Introduce a `borderRect` property to `AppleVisualEffectData`. This is necessary
as the shape of the material needs to be applied to the structural layer via
the `materialEffect`, and cannot be set via traditional `CALayer` properties.

* Source/WebCore/platform/graphics/ca/GraphicsLayerCA.cpp:
(WebCore::GraphicsLayerCA::commitLayerChangesBeforeSublayers):

Ensure a structural layer is created for hosted materials, using `-apple-visual-effect.`

(WebCore::GraphicsLayerCA::updateNames):
(WebCore::GraphicsLayerCA::updateAppleVisualEffectData):
(WebCore::GraphicsLayerCA::ensureStructuralLayer):

Creating a structural layer for material hosting takes precedence over
preserves-3D and replica flattening. Those features are not supported with
hosted materials, due to a (current) lack of use case.

(WebCore::GraphicsLayerCA::structuralLayerPurpose const):
* Source/WebCore/platform/graphics/ca/GraphicsLayerCA.h:
* Source/WebCore/platform/graphics/ca/PlatformCALayer.h:
* Source/WebCore/platform/graphics/ca/PlatformCALayer.mm:
(WebCore::operator<<):
* Source/WebCore/platform/graphics/ca/cocoa/PlatformCALayerCocoa.mm:
(WebCore::PlatformCALayerCocoa::PlatformCALayerCocoa):

Specify a plain

--- a/Source/WebKit/Shared/WebCoreArgumentCoders.serialization.in
+++ b/Source/WebKit/Shared/WebCoreArgumentCoders.serialization.in
@@ -8007,6 +8007,7 @@ header: <WebCore/AppleVisualEffect.h>
 [CustomHeader] struct WebCore::AppleVisualEffectData {
     WebCore::AppleVisualEffect effect;
     WebCore::AppleVisualEffect contextEffect;
+    std::optional<WebCore::FloatRoundedRect> borderRect;
 };
 
 #endif
